<resources>
    <string name="app_name">EJEMPLO</string>
    <string name="username_label">Usuario</string>
    <string name="username_placeholder">INTRODUCE DNI</string>
    <string name="passwd_label">Contraseña</string>
    <string name="passwd_placeholder">INTRODUCE CONTRASEÑA</string>
    <string name="button1_label">ACCEDER</string>
    <string name="button2_label">NUEVO TEST</string>
    <string name="button3_label">NUEVO EJERCICIO</string>
    <string name="button4_label">SEGUIMIENTO</string>
    <string name="Username_menu">Bienvenido John Doe</string>
    <string name="Username_menu2">Lección 1: Introducción</string>
    <string name="test_text">¿Cuál de las siguientes opciones NO se indica en el fichero de manifiesto de la app?</string>
    <string name="button_send">ENVIAR</string>
    <string name="button_help">VER AYUDA</string>
    <string name="exercise_text">Explica cómo aplicarías el patrón de diseño MVP en el desarrollo de una app para Android</string>
    <string name="button5_label">SUBIR FICHERO</string>
    <string name="button6_label">SACAR FOTOS</string>
    <string name="button7_label">GRABAR AUDIO</string>
    <string name="button8_label">GRABAR VIDEO</string>
    <string name="noCamera">No hay cámara en tu dispositivo</string>
    <string name="noApp">No hay app desde donde acceder a la función llamada</string>
    <string name="noMicro">No hay microfono en tu dispositivo</string>
</resources>
